--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -3,6 +3,13 @@
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import '_variables.css';
 
 /* You can override the default Infima variables here. */
 :root {
