--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,15 +1,29 @@
-/**
- * Any CSS included here will be global. The classic template
- * bundles Infima by default. Infima is a CSS framework designed to
- * work well for content-centric websites.
- */
+@charset 'UTF-8';
+
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100&display=swap');
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @import '_variables.css';
+
+/**
+ * Base
+ *
+ * https://tailwindcss.com/docs/adding-base-styles/
+ */
+@import 'base';
+
+/**
+  * Components
+  *
+  * https://tailwindcss.com/docs/extracting-components/#extracting-css-components-with-apply
+  */
+@tailwind components;
+
+/**
+  * Utilities
+  *
+  * https://tailwindcss.com/docs/adding-new-utilities
+  */
+@import 'utilities/_utilities';
 
 /* You can override the default Infima variables here. */
 :root {
