fix: set background color to black

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -21,7 +21,7 @@
   }
 
   body {
-    background-color: var(--color-yellow);
+    background-color: var(--color-black);
     max-width: 100vw;
     overflow-x: hidden;
   }
