fix: applying font family override such taht it appies on staic build

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -35,7 +35,7 @@
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
-
+  --ifm-heading-font-family: IBM Plex Mono, sans-serif;
   --ifm-font-family-base: IBM Plex Mono, sans-serif;
 }
 
