feat: creating the dev site header

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -26,7 +26,7 @@
     overflow-x: hidden;
   }
 
-  .dark body {
+  html[data-theme='dark'] body {
     background-color: var(--color-black);
   }
 }
