--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -36,6 +36,7 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --ifm-font-family-base: 'IBM Plex Mono';
+  --ifm-font-color-base: var(--color-yellow);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -49,6 +50,7 @@
   --ifm-color-primary-lightest: #4fddbf;
   --ifm-navbar-background-color: var(--color-black);
   --ifm-font-family-base: 'IBM Plex Mono';
+  --ifm-font-color-base: var(--color-yellow);
 }
 
 .docusaurus-highlight-code-line {
