--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -37,6 +37,7 @@
   --ifm-code-font-size: 95%;
   --ifm-font-family-base: 'IBM Plex Mono';
   --ifm-font-color-base: var(--color-yellow);
+  --doc-sidebar-width: 298px !important;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
