--- a/src/css/base.css
+++ b/src/css/base.css
@@ -21,13 +21,21 @@
     overflow-x: hidden;
   }
 
+  html,
   body {
     background-color: var(--color-black);
     max-width: 100vw;
     overflow-x: hidden;
   }
 
-  html[data-theme='dark'] body {
+  html[data-theme='dark'],
+  html[data-theme='light'],
+  html[data-theme='dark'] body,
+  html[data-theme='light'] body {
     background-color: var(--color-black);
+  }
+
+  a:hover {
+    text-decoration: none;
   }
 }
