--- a/src/css/_theme_style_overrides.css
+++ b/src/css/_theme_style_overrides.css
@@ -8,3 +8,8 @@
 [data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+ul.table-of-contents li a code,
+ul.table-of-contents li code {
+  background-color: none;
+}
