fix: add a dedicated text style for buttons to tailwind config

--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -57,7 +57,7 @@
   --typography-links-d-font-style: normal;
   --typography-links-d-font-stretch: normal;
   --typography-links-d-letter-spacing: 0;
-  --typography-links-d-line-height: 26px;
+  --typography-links-d-line-height: 18px;
   --typography-links-d-paragraph-indent: 0;
   --typography-links-d-paragraph-spacing: 0;
   --typography-links-d-text-case: none;
@@ -116,14 +116,14 @@
   --typography-body-1-m-paragraph-indent: 0;
   --typography-body-1-m-paragraph-spacing: 16px;
   --typography-body-1-m-text-case: none;
-  --typography-body-2-m-font-size: 14px;
+  --typography-body-2-m-font-size: 12px;
   --typography-body-2-m-text-decoration: none;
   --typography-body-2-m-font-family: IBM Plex Mono;
   --typography-body-2-m-font-weight: 400;
   --typography-body-2-m-font-style: normal;
   --typography-body-2-m-font-stretch: normal;
   --typography-body-2-m-letter-spacing: 0;
-  --typography-body-2-m-line-height: 20px;
+  --typography-body-2-m-line-height: 16px;
   --typography-body-2-m-paragraph-indent: 0;
   --typography-body-2-m-paragraph-spacing: 0;
   --typography-body-2-m-text-case: none;
@@ -134,7 +134,7 @@
   --typography-links-m-font-style: normal;
   --typography-links-m-font-stretch: normal;
   --typography-links-m-letter-spacing: 0;
-  --typography-links-m-line-height: 24px;
+  --typography-links-m-line-height: 18px;
   --typography-links-m-paragraph-indent: 0;
   --typography-links-m-paragraph-spacing: 0;
   --typography-links-m-text-case: none;
@@ -200,7 +200,7 @@
   --typography-h4-m-font-style: normal;
   --typography-h4-m-font-stretch: normal;
   --typography-h4-m-letter-spacing: 0;
-  --typography-h4-m-line-height: 28px;
+  --typography-h4-m-line-height: 26px;
   --typography-h4-m-paragraph-indent: 0;
   --typography-h4-m-paragraph-spacing: 0;
   --typography-h4-m-text-case: none;
@@ -233,7 +233,7 @@
   --typography-list-item-bullets-d-font-style: normal;
   --typography-list-item-bullets-d-font-stretch: normal;
   --typography-list-item-bullets-d-letter-spacing: 0;
-  --typography-list-item-bullets-d-line-height: 24px;
+  --typography-list-item-bullets-d-line-height: 26px;
   --typography-list-item-bullets-d-paragraph-indent: 0;
   --typography-list-item-bullets-d-paragraph-spacing: 16px;
   --typography-list-item-bullets-d-text-case: none;
@@ -314,4 +314,92 @@
   --typography-table-headers-m-paragraph-indent: 0;
   --typography-table-headers-m-paragraph-spacing: 0;
   --typography-table-headers-m-text-case: uppercase;
+  --typography-h2-d-medium-font-size: 24px;
+  --typography-h2-d-medium-text-decoration: none;
+  --typography-h2-d-medium-font-family: IBM Plex Mono;
+  --typography-h2-d-medium-font-weight: 500;
+  --typography-h2-d-medium-font-style: normal;
+  --typography-h2-d-medium-font-stretch: normal;
+  --typography-h2-d-medium-letter-spacing: 0;
+  --typography-h2-d-medium-line-height: 32px;
+  --typography-h2-d-medium-paragraph-indent: 0;
+  --typography-h2-d-medium-paragraph-spacing: 0;
+  --typography-h2-d-medium-text-case: none;
+  --typography-h2-m-medium-font-size: 24px;
+  --typography-h2-m-medium-text-decoration: none;
+  --typography-h2-m-medium-font-family: IBM Plex Mono;
+  --typography-h2-m-medium-font-weight: 500;
+  --typography-h2-m-medium-font-style: normal;
+  --typography-h2-m-medium-font-stretch: normal;
+  --typography-h2-m-medium-letter-spacing: 0;
+  --typography-h2-m-medium-line-height: 32px;
+  --typography-h2-m-medium-paragraph-indent: 0;
+  --typography-h2-m-medium-paragraph-spacing: 0;
+  --typography-h2-m-medium-text-case: none;
+  --typography-tags-d-underline-font-size: 12px;
+  --typography-tags-d-underline-text-decoration: underline;
+  --typography-tags-d-underline-font-family: IBM Plex Mono;
+  --typography-tags-d-underline-font-weight: 500;
+  --typography-tags-d-underline-font-style: normal;
+  --typography-tags-d-underline-font-stretch: normal;
+  --typography-tags-d-underline-letter-spacing: 0;
+  --typography-tags-d-underline-line-height: 12px;
+  --typography-tags-d-underline-paragraph-indent: 0;
+  --typography-tags-d-underline-paragraph-spacing: 0;
+  --typography-tags-d-underline-text-case: none;
+  --typography-tags-m-underline-font-size: 12px;
+  --typography-tags-m-underline-text-decoration: underline;
+  --typography-tags-m-underline-font-family: IBM Plex Mono;
+  --typography-tags-m-underline-font-weight: 500;
+  --typography-tags-m-underline-font-style: normal;
+  --typography-tags-m-underline-font-stretch: normal;
+  --typography-tags-m-underline-letter-spacing: 0;
+  --typography-tags-m-underline-line-height: 12px;
+  --typography-tags-m-underline-paragraph-indent: 0;
+  --typography-tags-m-underline-paragraph-spacing: 0;
+  --typography-tags-m-underline-text-case: none;
+  --typography-h3-d-underline-font-size: 18px;
+  --typography-h3-d-underline-text-decoration: underline;
+  --typography-h3-d-underline-font-family: IBM Plex Mono;
+  --typography-h3-d-underline-font-weight: 500;
+  --typography-h3-d-underline-font-style: normal;
+  --typography-h3-d-underline-font-stretch: normal;
+  --typography-h3-d-underline-letter-spacing: 0;
+  --typography-h3-d-underline-line-height: 24px;
+  --typography-h3-d-underline-paragraph-indent: 0;
+  --typography-h3-d-underline-paragraph-spacing: 0;
+  --typography-h3-d-underline-text-case: none;
+  --typography-h3-m-underline-font-size: 18px;
+  --typography-h3-m-underline-text-decoration: underline;
+  --typography-h3-m-underline-font-family: IBM Plex Mono;
+  --typography-h3-m-underline-font-weight: 500;
+  --typography-h3-m-underline-font-style: normal;
+  --typography-h3-m-underline-font-stretch: normal;
+  --typography-h3-m-underline-letter-spacing: 0;
+  --typography-h3-m-underline-line-height: 24px;
+  --typography-h3-m-underline-paragraph-indent: 0;
+  --typography-h3-m-underline-paragraph-spacing: 0;
+  --typography-h3-m-underline-text-case: none;
+  --typography-body-3-m-font-size: 14px;
+  --typography-body-3-m-text-decoration: none;
+  --typography-body-3-m-font-family: IBM Plex Mono;
+  --typography-body-3-m-font-weight: 400;
+  --typography-body-3-m-font-style: normal;
+  --typography-body-3-m-font-stretch: normal;
+  --typography-body-3-m-letter-spacing: 0;
+  --typography-body-3-m-line-height: 20px;
+  --typography-body-3-m-paragraph-indent: 0;
+  --typography-body-3-m-paragraph-spacing: 0;
+  --typography-body-3-m-text-case: none;
+  --typography-h1-t-font-size: 48px;
+  --typography-h1-t-text-decoration: none;
+  --typography-h1-t-font-family: IBM Plex Mono;
+  --typography-h1-t-font-weight: 700;
+  --typography-h1-t-font-style: normal;
+  --typography-h1-t-font-stretch: normal;
+  --typography-h1-t-letter-spacing: -1px;
+  --typography-h1-t-line-height: 50px;
+  --typography-h1-t-paragraph-indent: 0;
+  --typography-h1-t-paragraph-spacing: 0;
+  --typography-h1-t-text-case: none;
 }
