fix: set rollover and selected state colors for table of contents

--- a/src/css/_theme_style_overrides.css
+++ b/src/css/_theme_style_overrides.css
@@ -13,3 +13,11 @@ ul.table-of-contents li a code,
 ul.table-of-contents li code {
   background-color: transparent;
 }
+
+.table-of-contents__link:hover,
+.table-of-contents__link:hover code,
+.table-of-contents__link--active,
+.table-of-contents__link--active code {
+  color: var(--color-blue);
+  text-decoration: none;
+}
