--- a/src/css/_theme_overrides.css
+++ b/src/css/_theme_overrides.css
@@ -4,3 +4,6 @@
 @import '_navbar.css';
 @import '_sidebar.css';
 @import '_prose.css';
+@import '_illustration.css';
+@import '_social-media-tiles.css';
+@import '_dark-color-filter.css';
