--- a/src/css/_illustration.css
+++ b/src/css/_illustration.css
@@ -22,3 +22,9 @@
 .dark .invertDarkMode .tbd-illustration {
   filter: none;
 }
+
+.tbd-social-icon {
+  min-width: 1.5rem;
+  min-height: 1.5rem;
+  left: -0.7rem;
+}
