--- a/src/css/_layout.css
+++ b/src/css/_layout.css
@@ -41,6 +41,10 @@ html {
   padding-right: 0 !important;
 }
 
+.max-w-container {
+  max-width: var(--max-page-width);
+}
+
 @media (max-width: 996px) {
   .main-wrapper {
     margin-top: 3rem;
