--- a/src/css/_open_source.css
+++ b/src/css/_open_source.css
@@ -1,21 +1,21 @@
-.open-source-container hr {
+.custom-container hr {
   margin-top: 4.5rem;
   margin-bottom: 4.5rem;
 }
 
-.open-source-container .bg-dotted-dark {
+.custom-container .bg-dotted-dark {
   margin-top: 0rem;
   margin-bottom: 0rem;
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
-  .open-source-container hr {
+  .custom-container hr {
     margin-top: 3.5rem;
     margin-bottom: 3.5rem;
   }
 }
 @media (max-width: 767px) {
-  .open-source-container hr {
+  .custom-container hr {
     margin-top: 3rem;
     margin-bottom: 3rem;
   }
