feat: Add project component to the projects page
Also add option to the ProjectList component to choose if the
project component grows to fit the page or not

--- a/src/css/_projects.css
+++ b/src/css/_projects.css
@@ -1,7 +1,8 @@
 .actors-container hr,
 .actors-container img,
 .actors-container h2,
-.actors-container p {
+.actors-container p,
+.project-container hr {
   margin-top: 0rem !important;
   margin-bottom: 0rem !important;
 }
