Fix_for_style_on_docs/intro_pagination

--- a/src/css/_theme_style_overrides.css
+++ b/src/css/_theme_style_overrides.css
@@ -21,3 +21,10 @@ ul.table-of-contents li code {
   color: var(--color-blue);
   text-decoration: none;
 }
+
+.pagination-nav__sublabel {
+  display:none;
+}
+.pagination-nav__link {
+  border: none;
+}
