--- a/src/css/_theme_var_orverrides.css
+++ b/src/css/_theme_var_orverrides.css
@@ -15,6 +15,8 @@
   --ifm-font-color-base: var(--color-yellow);
   --doc-sidebar-width: 298px !important;
   --ifm-code-background: var(--color-blue);
+  --ifm-toc-border-color: var(--color-yellow);
+  --ifm-toc-link-color: var(--color-blue);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
