--- a/src/css/_theme_style_overrides.css
+++ b/src/css/_theme_style_overrides.css
@@ -27,6 +27,11 @@ ul.table-of-contents li code {
 }
 .pagination-nav__link {
   border: none;
+
+}
+.pagination-nav__label {
+  font-weight: 500;
+  font-size: 1em;
 }
 
 .pagination-nav__item:first-child .pagination-nav__label::before {
