--- a/src/css/_prose.css
+++ b/src/css/_prose.css
@@ -69,3 +69,8 @@
   border-width: 0;
   background-image: url('/img/divider-slash-dark.svg');
 }
+
+.prose :where(code):not(:where([class~='not-prose'] *)):before,
+.prose :where(code):not(:where([class~='not-prose'] *)):after {
+  content: '' !important;
+}
