--- a/src/css/_theme_style_overrides.css
+++ b/src/css/_theme_style_overrides.css
@@ -20,11 +20,17 @@ ul.table-of-contents li code {
 .table-of-contents__link--active code {
   color: var(--color-yellow);
   text-decoration: none;
-  font-weight: 700;
+  font-weight: 700 !important;
 }
 
 .table-of-contents li {
-  margin: var(--ifm-toc-padding-vertical) 1.5rem;
+  margin: 0.75rem 1.5rem;
+}
+
+.table-of-contents__link {
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 1.375rem;
 }
 
 .table-of-contents__left-border {
