feat: set table headers to be all caps when wrapped in prose class

--- a/src/css/_prose.css
+++ b/src/css/_prose.css
@@ -74,3 +74,7 @@
 .prose :where(code):not(:where([class~='not-prose'] *)):after {
   content: '' !important;
 }
+
+.prose :where(thead th):not(:where([class~='not-prose'] *)) {
+  text-transform: uppercase;
+}
