--- a/src/css/_theme_style_overrides.css
+++ b/src/css/_theme_style_overrides.css
@@ -88,7 +88,8 @@ article header .avatar__intro:only-child {
   margin-top: -0.9375rem;
   margin-bottom: 7px;
 }
-56px !important article header div {
+
+article header div {
   font-weight: 400;
   font-size: 0.875rem !important;
   line-height: 1.25rem;
