--- a/src/css/_theme_style_overrides.css
+++ b/src/css/_theme_style_overrides.css
@@ -129,6 +129,11 @@ article footer .col b {
     font-size: var(--typography-h3-m-font-size);
     line-height: var(--typography-h3-m-line-height);
   }
+  article header h2 {
+    font-size: var(--typography-h2-m-medium-font-size) !important;
+    line-height: var(--typography-h2-m-medium-line-height) !important;
+    font-weight: var(--typography-h2-m-medium-font-weight) !important;
+  }
 }
 article footer {
   flex-direction: column-reverse !important;
