fix: adds rotation to details summary chevron
fixes chevron to rotate when dropdown is activated

Resolves: #311

--- a/src/css/_theme_style_overrides.css
+++ b/src/css/_theme_style_overrides.css
@@ -21,3 +21,6 @@ ul.table-of-contents li code {
   color: var(--color-blue);
   text-decoration: none;
 }
+details[open] > summary > button {
+  transform: rotate(180deg);
+}
