--- a/src/css/_theme_style_overrides.css
+++ b/src/css/_theme_style_overrides.css
@@ -62,3 +62,12 @@ ul.table-of-contents li code {
   padding-left: 0 !important;
 }
 
+.tooltipBorder{
+  border-image-slice: 0 30 30 0 !important;
+  border-image-width: 12px 12px 12px 12px !important;
+  border-image-outset: 0px 16px 16px 0px !important;
+  border-image-repeat: repeat repeat !important;
+  border-image-source: url('/img/tooltip-border.png') !important;
+  border-style: solid !important;
+  border: 6px;
+}
