--- a/src/css/_sidebar.css
+++ b/src/css/_sidebar.css
@@ -24,16 +24,38 @@ aside .menu__link--sublist-caret:after {
 aside .menu__list {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1.25rem;
   transition: all 221ms ease-in-out 0s !important;
 }
 
 aside .menu__list .menu__list {
   display: flex !important;
-  margin-top: 1.5rem;
-  gap: 2rem;
+  margin-top: 1.25rem;
+  gap: 1.25rem;
 }
 
+.menu__caret:before {
+  content: url('/img/arrow-blue.svg');
+  background: none !important;
+  filter: none !important;
+}
+.menu__list-item--collapsed .menu__caret:before {
+  top: -4px;
+  position: relative;
+}
+.menu__caret {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  position: relative;
+  top: 6px;
+}
+.menu__caret:hover {
+  height: 10px;
+  background: none !important;
+}
+.menu__link.menu__link--sublist {
+  max-width: 10.8125rem;
+}
 aside .menu__list-item:not(:first-child) {
   margin-top: 0rem;
 }
@@ -65,18 +87,20 @@ aside
   content: none;
 }
 aside .menu__list .menu__list .menu__link {
-  padding-left: 50px;
+  padding-left: 25px;
+  height: fit-content;
+  max-width: 173px;
 }
 aside .menu__list .menu__list .menu__link--active {
-  padding-left: 50px;
+  padding-left: 25px;
 }
 
 aside .menu__list .menu__list .menu__link--active::before {
   content: url('/img/selected-arrow-blue.svg');
-  top: -4px;
+  top: -1px;
   position: relative;
   margin-right: -24px;
-  left: -2.1rem;
+  left: -2.8125rem;
 }
 
 @media (min-width: 997px) {
