--- a/src/css/_theme_var_orverrides.css
+++ b/src/css/_theme_var_orverrides.css
@@ -17,6 +17,7 @@
   --ifm-code-background: var(--color-blue);
   --ifm-toc-border-color: var(--color-yellow);
   --ifm-toc-link-color: var(--color-blue);
+  --ifm-menu-link-sublist-icon: url('/img/arrow-blue.svg');
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
