feat: Add the events index and create a event detail tempalte

--- a/src/css/_theme_style_overrides.css
+++ b/src/css/_theme_style_overrides.css
@@ -108,6 +108,12 @@ article .markdown p {
   line-height: var(--typography-body-1-d-line-height);
 }
 
+article .markdown h5 {
+  font-weight: var(--typography-body-2-d-font-weight);
+  font-size: var(--typography-body-2-d-font-size);
+  line-height: var(--typography-body-2-d-line-height);
+}
+
 article footer .col {
   display: flex;
   flex-direction: column;
