--- a/src/css/_sidebar.css
+++ b/src/css/_sidebar.css
@@ -102,6 +102,7 @@ aside .menu__list .menu__list .menu__link:hover::before {
   aside.docSidebarContainer_src-layout-DocPage-styles-module,
   aside.theme-doc-sidebar-container {
     border-right: none !important;
+    margin-right: 1.5rem !important;
   }
 }
 
