--- a/src/css/_theme_var_orverrides.css
+++ b/src/css/_theme_var_orverrides.css
@@ -18,6 +18,8 @@
   --ifm-toc-border-color: var(--color-yellow);
   --ifm-toc-link-color: var(--color-blue);
   --ifm-menu-link-sublist-icon: url('/img/arrow-blue.svg');
+  --ifm-navbar-sidebar-width: 100vw;
+  --ifm-navbar-height: 12.75rem;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
