fix: Fix clicking the arrow button on Transcription not working

--- a/src/css/_theme_style_overrides.css
+++ b/src/css/_theme_style_overrides.css
@@ -288,7 +288,7 @@ nav .pagination-nav__link {
   padding-left: 0.5rem !important;
 }
 
-details[open] > summary > div > button {
+details[open] > summary > div > .arrow-container {
   transform: rotate(180deg);
 }
 
